chore(devcontainer): update devcontainer configuration

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,16 +9,16 @@
 		"dockerfile": "../Dockerfile"
 	},
 	"workspaceFolder": "/app",
-	//"features": {
-	//	"ghcr.io/devcontainers/features/docker-in-docker:2.12.4": {}
-	//},
-
+	"features": {
+		"ghcr.io/devcontainers/features/git:1": {}
+	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [8000, 5432],
-
+	"forwardPorts": [
+		8000,
+		5432
+	],
 	// Uncomment the next line to run commands after the container is created.
 	"postCreateCommand": "pip install --upgrade pip && pip install -r requirements.txt",
-
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
@@ -36,7 +36,6 @@
 			}
 		}
 	}
-
 	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+	//"remoteUser": "root"
 }
