--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,13 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-dockerfile
 {
-	"name": "Python && PostgreSQL",
-	"build": {
-		// Sets the run context to one level up instead of the .devcontainer folder.
-		"context": "..",
-		// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
-		"dockerfile": "../Dockerfile"
-	},
+	"name": "Python & PostgreSQL",
+	"dockerComposeFile": "../docker-compose.yml",
+	"service": "backend",
 	"workspaceFolder": "/app",
-	"features": {
-		"ghcr.io/devcontainers/features/git:1": {}
-	},
+	// "features": {
+	// 	"ghcr.io/devcontainers/features/git:1": {}
+	// },
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
 		8000,
@@ -36,6 +32,6 @@
 			}
 		}
 	}
+	// "remoteUser": "root"
 	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
-	//"remoteUser": "root"
 }
