--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,28 @@ version: '3.8'
 
 services:
   backend:
-    image: sisteminha/compose-backend:latest
-    container_name: compose-backend
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "8080:8000"
     volumes:
       - .:/app
-    environment:
-      - PYTHONUNBUFFERED=1
-      - DATABASE_URL=postgresql://sisteminha:3uKiCycPOIq1xFT8Aan4x20dlFltYjGe@dpg-d15cadre5dus739gud80-a.oregon-postgres.render.com/sisteminha_bancp
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
     depends_on:
       - db
-    command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+    command: > 
+      sh -c "python manage.py migrate &&
+             python manage.py runserver 0.0.0:8000"
 
   db:
-    image: postgres:16
-    environment:
-      POSTGRES_DB: sisteminha_bancp
-      POSTGRES_USER: sisteminha
-      POSTGRES_PASSWORD: 3uKiCycPOIq1xFT8Aan4x20dlFltYjGe
-    ports:
-      - "5432:5432"
+    image: postgres:13-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    env_file:
+      - .env
+    restart: unless-stopped
+
+volumes:
+  postgres_data:
