--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,9 +5,9 @@
 	"dockerComposeFile": "../docker-compose.yml",
 	"service": "backend",
 	"workspaceFolder": "/app",
-	// "features": {
-	// 	"ghcr.io/devcontainers/features/git:1": {}
-	// },
+	"features": {
+		"ghcr.io/devcontainers/features/git-lfs:1": {}
+	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
 		8000,
