--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,37 @@
 asgiref==3.8.1
+astmonkey==0.3.6
 Django==4.2.21
-django-cors-headers==4.6.0
+django-cors-headers==4.4.0
 django-filter==24.3
 django-rest-framework==0.1.0
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.8
+exceptiongroup==1.3.0
+gitdb==4.0.12
+GitPython==3.1.41
+importlib_metadata==8.7.0
 inflection==0.5.1
+iniconfig==2.1.0
+Jinja2==3.1.6
 Markdown==3.7
+MarkupSafe==3.0.3
+MutPy==0.6.1
 packaging==24.2
 pillow==11.0.0
+pluggy==1.6.0
 psycopg2-binary==2.9.10
+pydot==4.0.1
+Pygments==2.19.2
+PyJWT==2.10.1
+pyparsing==3.2.5
+pytest==8.4.1
 pytz==2024.2
 PyYAML==6.0.2
+smmap==5.0.2
 sqlparse==0.5.2
+termcolor==3.1.0
+tomli==2.2.1
+typing_extensions==4.15.0
 uritemplate==4.1.1
-djangorestframework-simplejwt==5.2.2
-pytest==8.4.1
-mutpy==0.6.1
+zipp==3.23.0
