--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -35,4 +35,4 @@ jobs:
 
     - name: Run Tests
       run: |
-        python manage.py test
+        python -W "error::PendingDeprecationWarning" manage.py test
