--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,8 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = backend.tests.test_settings
+DJANGO_SETTINGS_MODULE = backend.settings
 filterwarnings =
-    ignore::DeprecationWarning
-python_files = tests/test_*.py
+    ; error::django.utils.deprecation.RemovedInDjango51Warning
+    error::PendingDeprecationWarning
+    error::DeprecationWarning
+
+python_files = tests.py tests/test_*.py *_tests.py
