--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -22,12 +22,19 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Cache Dependency-Check data
+        uses: actions/cache@v3
+        with:
+          path: ~/.dependency-check
+          key: ${{ runner.os }}-dependency-check
+
       - name: Run OWASP Dependency Check
         run: |
           mkdir -p reports
           docker run --rm \
             -v ${{ github.workspace }}:/src \
             -v ${{ github.workspace }}/reports:/report \
+            -e NVD_API_KEY=${{ secrets.NVD_API_KEY }} \
             owasp/dependency-check:latest \
             --project "backend" \
             --scan /src \
