--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -35,7 +35,7 @@ jobs:
             -v ${{ github.workspace }}:/src \
             -v ${{ github.workspace }}/reports:/report \
             -e NVD_API_KEY=${{ secrets.NVD_API_KEY }} \
-            owasp/dependency-check:latest \
+            owasp/dependency-check \
             --project "backend" \
             --scan /src \
             --format "HTML" \
