--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -22,30 +22,26 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Cache Dependency-Check data
-        uses: actions/cache@v3
-        with:
-          path: ~/.dependency-check
-          key: ${{ runner.os }}-dependency-check
+          pip freeze > requirements.lock
+
 
       - name: Run OWASP Dependency Check
+        uses: dependency-check/Dependency-Check_Action@v7
         env:
           NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
-        run: |
-          mkdir -p reports
-          docker run --rm \
-            -v ${{ github.workspace }}:/src \
-            -v ${{ github.workspace }}/reports:/report \
-            -e NVD_API_KEY=$NVD_API_KEY \
-            owasp/dependency-check:latest \
-            --project "backend" \
-            --scan /src \
-            --format "HTML" \
-            --out /report \
-            --failOnCVSS 7 \
+        with:
+          project: 'backend'
+          path: '.'
+          format: 'HTML'
+          fail_cvss_score: 7.0
+          scan_path_exclusions: |
+            .git/
+            .github/
+          
 
       - name: Upload Test results
-        uses: actions/upload-artifact@master
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
            name: Depcheck report
            path: ${{github.workspace}}/reports
