--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -26,7 +26,7 @@ jobs:
 
 
       - name: Run OWASP Dependency Check
-        uses: dependency-check/Dependency-Check_Action@v7
+        uses: dependency-check/Dependency-Check_Action@main
         env:
           NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
         with:
