--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -31,6 +31,7 @@ jobs:
 
 
       - name: Upload audit report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
            name: pip-audit-report
