chore: add condition to ignore if no files found in pip-audit report upload

--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -36,3 +36,4 @@ jobs:
         with:
            name: pip-audit-report
            path: pip-audit-report.md
+           if-no-files-found: ignore
