--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,8 @@ updates:
     directory: "/"
     schedule:
       interval: daily
+    ignore:
+      - dependency-name: "cyclonedx-python-lib"
   
   - package-ecosystem: "devcontainers"
     directory: "/"
