--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ defusedxml==0.7.1
 Django==5.2.9
 django-cors-headers==4.9.0
 django-filter==25.2
+django-models2puml==0.2
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.11
