--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,12 @@ services:
       - db
 
   db:
-    image: postgres:13-alpine
+    image: postgres:14-alpine
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_v14:/var/lib/postgresql/data
     env_file:
       - .env
     restart: unless-stopped
 
 volumes:
-  postgres_data:
+  postgres_data_v14:
